# bempline

./: .gitattributes  CHANGELOG  Cargo.toml  LICENSE  README.md  reference.md
src/: document.rs  elements.rs  error.rs  lib.rs  options.rs
test/: another.bpl  include_some.bpl  include_test.bpl  pattern_include_ifset_base.bpl  pattern_include_ifset_included.bpl  set-command.bpl  template.bpl  testdoc_nested  wrapped_include.bpl  wrapping_include.bpl  wrapping_set.bpl
test/subdir/: some.bpl
tests/: test_external.rs  testdoc  testdoc_nested
tests/foo/: bar
