[package]
name = "bempline"
version = "0.2.0"
description = "Simple template library"
authors = ["Genny <gen@nyble.dev>"]
repository = "https://github.com/gennyble/bempline"
readme = "README.md"
keywords = ["template", "html"]
categories = ["template-engine"]
license = "ISC"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
