[package]
name = "bempline"
version = "0.7.0"
description = "Simple template library"
authors = ["Genny Z <gen@nyble.dev>"]
repository = "https://github.com/gennyble/bempline"
readme = "README.md"
keywords = ["template", "html"]
categories = ["template-engine"]
license = "ISC"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
